generate visualization for bug corrections

--- a/notebooks/correlation_notebooks.ipynb
+++ b/notebooks/correlation_notebooks.ipynb
@@ -8583,7 +8583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c732ff2f",
    "metadata": {},
    "outputs": [
@@ -8591,7 +8591,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1294188/1663198454.py:14: PerformanceWarning: Determining the column names of a LazyFrame requires resolving its schema, which is a potentially expensive operation. Use `LazyFrame.collect_schema().names()` to get the column names without this warning.\n",
+      "/tmp/ipykernel_1747792/346314278.py:14: PerformanceWarning: Determining the column names of a LazyFrame requires resolving its schema, which is a potentially expensive operation. Use `LazyFrame.collect_schema().names()` to get the column names without this warning.\n",
       "  cols = pl.scan_csv(CSV_PATH).columns\n"
      ]
     },
@@ -8606,9 +8606,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1294188/1663198454.py:47: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
+      "/tmp/ipykernel_1747792/346314278.py:47: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
       "  out = lf.collect(streaming=True)\n",
-      "/tmp/ipykernel_1294188/1663198454.py:67: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
+      "/tmp/ipykernel_1747792/346314278.py:67: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
       "  total += float(lf.collect(streaming=True)[\"tot\"][0])\n"
      ]
     },
@@ -8617,14 +8617,14 @@
      "output_type": "stream",
      "text": [
       "[TS] AC: rows=17,306 mean_k=204.76\n",
-      "[TS] MFBA9BA46: rows=17,306 mean_k=81.3162\n",
-      "[TS] PCGBA23: rows=17,306 mean_k=614.835\n",
+      "[TS] MFBA9BA46: rows=17,306 mean_k=200.364\n",
+      "[TS] PCGBA23: rows=17,306 mean_k=206.349\n",
       "[CT] AC->MFBA9BA46: rows=17,306 mean_k=215.352\n",
       "[CT] AC->PCGBA23: rows=17,306 mean_k=217.778\n",
       "[CT] MFBA9BA46->AC: rows=17,306 mean_k=215.352\n",
-      "[CT] MFBA9BA46->PCGBA23: rows=17,306 mean_k=47.6993\n",
+      "[CT] MFBA9BA46->PCGBA23: rows=17,306 mean_k=236.737\n",
       "[CT] PCGBA23->AC: rows=17,306 mean_k=217.778\n",
-      "[CT] PCGBA23->MFBA9BA46: rows=17,306 mean_k=47.6993\n"
+      "[CT] PCGBA23->MFBA9BA46: rows=17,306 mean_k=236.737\n"
      ]
     }
    ],
@@ -8633,7 +8633,7 @@
     "from collections import defaultdict\n",
     "from math import ceil\n",
     "\n",
-    "CSV_PATH = \"/Users/edeneldar/Library/CloudStorage/GoogleDrive-edenede2@gmail.com/My Drive/ROSMAP_Data/RNAseq_RISK_BrainRegions_STasaki/adj4rn.csv\"\n",
+    "CSV_PATH = \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/notebooks/WGCNA_new_ROSMAP_AdjFunc_adjacency_no_NEWFUNC_ISONEW2025-09-07.csv\"\n",
     "ROW_ID_COL = None\n",
     "\n",
     "# List all possible tissue names (edit as needed)\n",
@@ -8720,17 +8720,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a68e3b43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1677048/3890295106.py:16: PerformanceWarning: Determining the column names of a LazyFrame requires resolving its schema, which is a potentially expensive operation. Use `LazyFrame.collect_schema().names()` to get the column names without this warning.\n",
+      "  all_cols = lf0.columns\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] ROW_ID_COL = \n",
+      "[INFO] #columns (data): 51,918\n",
+      "[INFO] Detected tissues (OLD): ['AC', 'MFBA9BA46', 'PCGBA23']\n",
+      "[INFO] Detected tissues (NEW): ['AC', 'AC_ENSG00000002586.18_PAR', 'AC_ENSG00000124333.15_PAR', 'AC_ENSG00000167393.17_PAR', 'AC_ENSG00000168939.11_PAR', 'AC_ENSG00000169084.13_PAR', 'AC_ENSG00000169093.15_PAR', 'AC_ENSG00000169100.13_PAR', 'AC_ENSG00000178605.13_PAR', 'AC_ENSG00000182378.13_PAR', 'AC_ENSG00000182484.15_PAR', 'AC_ENSG00000185291.11_PAR', 'AC_ENSG00000197976.11_PAR', 'AC_ENSG00000198223.16_PAR', 'AC_ENSG00000214717.11_PAR', 'AC_ENSG00000236017.8_PAR', 'MFBA9BA46', 'MFBA9BA46_ENSG00000002586.18_PAR', 'MFBA9BA46_ENSG00000124333.15_PAR', 'MFBA9BA46_ENSG00000167393.17_PAR', 'MFBA9BA46_ENSG00000168939.11_PAR', 'MFBA9BA46_ENSG00000169084.13_PAR', 'MFBA9BA46_ENSG00000169093.15_PAR', 'MFBA9BA46_ENSG00000169100.13_PAR', 'MFBA9BA46_ENSG00000178605.13_PAR', 'MFBA9BA46_ENSG00000182378.13_PAR', 'MFBA9BA46_ENSG00000182484.15_PAR', 'MFBA9BA46_ENSG00000185291.11_PAR', 'MFBA9BA46_ENSG00000197976.11_PAR', 'MFBA9BA46_ENSG00000198223.16_PAR', 'MFBA9BA46_ENSG00000214717.11_PAR', 'MFBA9BA46_ENSG00000236017.8_PAR', 'PCGBA23', 'PCGBA23_ENSG00000002586.18_PAR', 'PCGBA23_ENSG00000124333.15_PAR', 'PCGBA23_ENSG00000167393.17_PAR', 'PCGBA23_ENSG00000168939.11_PAR', 'PCGBA23_ENSG00000169084.13_PAR', 'PCGBA23_ENSG00000169093.15_PAR', 'PCGBA23_ENSG00000169100.13_PAR', 'PCGBA23_ENSG00000178605.13_PAR', 'PCGBA23_ENSG00000182378.13_PAR', 'PCGBA23_ENSG00000182484.15_PAR', 'PCGBA23_ENSG00000185291.11_PAR', 'PCGBA23_ENSG00000197976.11_PAR', 'PCGBA23_ENSG00000198223.16_PAR', 'PCGBA23_ENSG00000214717.11_PAR', 'PCGBA23_ENSG00000236017.8_PAR']\n",
+      "[INFO] Columns with different tissue label (old vs new): 45/51918 (0.1%)\n",
+      "\n",
+      "[STEP] Counting rows per tissue (OLD labeling)…\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1677048/3890295106.py:63: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
+      "  return int(lf.collect(streaming=True).item())\n",
+      "/tmp/ipykernel_1677048/3890295106.py:72: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
+      "  return lf.collect(streaming=True)[ROW_ID_COL].to_list()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  OLD rows[AC] = 17,306  sample: ['AC_ENSG00000000003.14', 'AC_ENSG00000000419.12', 'AC_ENSG00000000457.13', 'AC_ENSG00000000460.16', 'AC_ENSG00000000938.12']\n",
+      "  OLD rows[MFBA9BA46] = 17,306  sample: ['MFBA9BA46_ENSG00000000003.14', 'MFBA9BA46_ENSG00000000419.12', 'MFBA9BA46_ENSG00000000457.13', 'MFBA9BA46_ENSG00000000460.16', 'MFBA9BA46_ENSG00000000938.12']\n",
+      "  OLD rows[PCGBA23] = 17,306  sample: ['PCGBA23_ENSG00000000003.14', 'PCGBA23_ENSG00000000419.12', 'PCGBA23_ENSG00000000457.13', 'PCGBA23_ENSG00000000460.16', 'PCGBA23_ENSG00000000938.12']\n",
+      "\n",
+      "[STEP] Counting rows per tissue (NEW labeling)…\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
+      "Cell \u001b[0;32mIn[1], line 127\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m[STEP] Counting rows per tissue (NEW labeling)…\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 127\u001b[0m n_rows_new \u001b[38;5;241m=\u001b[39m \u001b[43mn_rows_map\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtissues_new\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mnew\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    128\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m tissues_new:\n",
+      "Cell \u001b[0;32mIn[1], line 98\u001b[0m, in \u001b[0;36mn_rows_map\u001b[0;34m(tissues, mode)\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m tissues:\n\u001b[0;32m---> 98\u001b[0m     out[t] \u001b[38;5;241m=\u001b[39m \u001b[43mcount_rows_for_tissue\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
+      "Cell \u001b[0;32mIn[1], line 63\u001b[0m, in \u001b[0;36mcount_rows_for_tissue\u001b[0;34m(prefix)\u001b[0m\n\u001b[1;32m     59\u001b[0m lf \u001b[38;5;241m=\u001b[39m (pl\u001b[38;5;241m.\u001b[39mscan_csv(CSV_PATH)\n\u001b[1;32m     60\u001b[0m         \u001b[38;5;241m.\u001b[39mselect([ROW_ID_COL])\n\u001b[1;32m     61\u001b[0m         \u001b[38;5;241m.\u001b[39mfilter(pl\u001b[38;5;241m.\u001b[39mcol(ROW_ID_COL)\u001b[38;5;241m.\u001b[39mstr\u001b[38;5;241m.\u001b[39mstarts_with(prefix \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     62\u001b[0m         \u001b[38;5;241m.\u001b[39mselect(pl\u001b[38;5;241m.\u001b[39mlen()))\n\u001b[0;32m---> 63\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[43mlf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstreaming\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mitem())\n",
+      "File \u001b[0;32m~/fsl/lib/python3.11/site-packages/polars/_utils/deprecation.py:97\u001b[0m, in \u001b[0;36mdeprecate_streaming_parameter.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstreaming\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m---> 97\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/fsl/lib/python3.11/site-packages/polars/lazyframe/opt_flags.py:330\u001b[0m, in \u001b[0;36mforward_old_opt_flags.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    329\u001b[0m kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moptimizations\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m optflags\n\u001b[0;32m--> 330\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/fsl/lib/python3.11/site-packages/polars/lazyframe/frame.py:2407\u001b[0m, in \u001b[0;36mLazyFrame.collect\u001b[0;34m(self, type_coercion, predicate_pushdown, projection_pushdown, simplify_expression, slice_pushdown, comm_subplan_elim, comm_subexpr_elim, cluster_with_columns, collapse_joins, no_optimization, engine, background, optimizations, **_kwargs)\u001b[0m\n\u001b[1;32m   2406\u001b[0m callback \u001b[38;5;241m=\u001b[39m _kwargs\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpost_opt_callback\u001b[39m\u001b[38;5;124m\"\u001b[39m, callback)\n\u001b[0;32m-> 2407\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m wrap_df(\u001b[43mldf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcallback\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m~/fsl/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3598\u001b[0m, in \u001b[0;36mInteractiveShell.run_code\u001b[0;34m(self, code_obj, result, async_)\u001b[0m\n\u001b[1;32m   3596\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[1;32m   3597\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 3598\u001b[0m         result\u001b[38;5;241m.\u001b[39merror_in_exec \u001b[38;5;241m=\u001b[39m \u001b[43msys\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexc_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m   3599\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshowtraceback(running_compiled_code\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m   3600\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import polars as pl\n",
     "from collections import defaultdict\n",
     "from math import ceil\n",
     "\n",
     "# ------------------ CONFIG ------------------\n",
-    "CSV_PATH   = \"/Users/edeneldar/Library/CloudStorage/GoogleDrive-edenede2@gmail.com/My Drive/ROSMAP_Data/RNAseq_RISK_BrainRegions_STasaki/adj4rn.csv\"\n",
+    "CSV_PATH   = \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/notebooks/WGCNA_new_ROSMAP_oldAdjFunc_adjacency_no_2025-09-07.csv\"\n",
     "ROW_ID_COL = None            # אם ידוע לך שם עמודת השורות (למשל \"id\"), כתוב אותו כאן\n",
     "CHUNK_SIZE = 2048            # מספר עמודות שנסכום בכל מעבר (לאזן בין IO לזמן)\n",
     "SAMPLE_N   = 5               # כמה מזהי שורות לדגום לכל רקמה\n",
@@ -8923,7 +8987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9c65db4e",
    "metadata": {},
    "outputs": [],
@@ -9005,7 +9069,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new_base",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
